# cpp-filewatcher

./: .clang_complete  .gitignore  CMakeLists.txt  README.md
include/: FileWatcher.hpp
include/FileWatcher/: FileWatcher.hpp
sample/: main.cpp
src/: FileWatcher.cpp
